// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

// User model
model User {
  id          Int      @id @default(autoincrement())
  firebaseUid String?  @unique
  email       String   @unique
  password    String?
  name        String?
  onboardingDone Boolean @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  finance     UserFinance?

  portfolios  Portfolio[]
  diaryScores DiaryScoreHistory[]
  taxHistories TaxHistory[]
}

// ─── Consolidated User Finance Model ────────────────────────────────────

model UserFinance {
  id             Int      @id @default(autoincrement())
  userId         Int      @unique
  user           User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  // Expenses
  food           Float    @default(0)
  rent           Float    @default(0)
  transport      Float    @default(0)
  necessities    Float    @default(0)
  other          Float    @default(0)
  debt           Float    @default(0)

  // Assets & Income
  monthlyIncome  Float?   @default(0)
  currentCapital Float    @default(0)
  emergencyFund  Float    @default(0)
  monthlySavings Float    @default(0)

  // Retirement
  currentAge     Int      @default(25)
  retirementAge  Int      @default(60)
  retirementGoal Float    @default(0)
  dividendGoal   Float    @default(0)

  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
}

// Asset model for financial instruments
model Asset {
  id          Int     @id @default(autoincrement())
  symbol      String  @unique
  name        String
  sector      String? // e.g. "เทคโนโลยี AI", "ซอฟต์แวร์"
  category    String  // "thai-stock", "reit", "dr", "us-stock", "etf-bond"
  yield       Float   // Annual yield percentage
  risk        Float   // Risk score 1-10
  badge       String  // "div", "growth", "alt"
  taxBase     Int     // Tax basis (0, 20, 30, 50)
  paysDividend Boolean
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  items       PortfolioItem[]
}

// Bank interest tier model
model BankTier {
  id          Int     @id @default(autoincrement())
  bankId      String  // "kkp_dime", "tcrb_alpha", etc.
  bankName    String
  minBalance  Int     // Minimum balance for this tier
  interestRate Float  // Annual interest rate
  createdAt   DateTime @default(now())

  @@unique([bankId, minBalance])
}

// Main Portfolio model
model Portfolio {
  id        Int     @id @default(autoincrement())
  name      String
  userId    Int
  user      User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  items     PortfolioItem[]
}

// Portfolio items (holdings & DCA purchases)
model PortfolioItem {
  id          Int       @id @default(autoincrement())
  portfolioId Int
  portfolio   Portfolio @relation(fields: [portfolioId], references: [id], onDelete: Cascade)
  assetId     Int
  asset       Asset     @relation(fields: [assetId], references: [id])
  allocation  Float     // DCA allocation percentage (e.g. 10%)
  buyDate     DateTime  // Buy date of transaction
  createdAt   DateTime  @default(now())

  @@index([portfolioId, assetId])
}

// Chat history for AI assistant
model ChatMessage {
  id          Int      @id @default(autoincrement())
  sessionId   String   // Group messages by session (UUID)
  firebaseUid String   // Firebase UID of the user
  role        String   // "user" | "assistant"
  content     String   // Message text
  sources     Json?    // Optional: [{title, url}] for RAG citations
  createdAt   DateTime @default(now())

  @@index([firebaseUid, sessionId])
  @@index([sessionId])
}

// Insurance Plans for Simulator
model InsurancePlan {
  id             Int      @id @default(autoincrement())
  company        String
  category       String   // "car_class_1", "car_class_2", "car_class_3", "health_life"
  planName       String?
  coverage       Json     // Store the display string and numeric limits
  features       String?
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
}

// Diary AI Evaluation Score History
model DiaryScoreHistory {
  id             Int      @id @default(autoincrement())
  userId         Int
  user           User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  evaluationType String   // "month" or "year"
  periodKey      String   // e.g. "2026-7" or "2026"
  score          Int
  review         String
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  @@unique([userId, evaluationType, periodKey])
}

// Tax History — yearly tax records per user
model TaxHistory {
  id                    Int      @id @default(autoincrement())
  userId                Int
  user                  User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  taxYear               Int      // ปีภาษี (พ.ศ.) เช่น 2567, 2568
  annualIncome          Float    // รายได้ทั้งปี
  totalDeductions       Float    // ลดหย่อนทั้งหมด
  netIncome             Float    // เงินได้สุทธิ
  taxWithoutDeductions  Float    // ภาษีก่อนลดหย่อน
  taxWithDeductions     Float    // ภาษีหลังลดหย่อน
  taxSaved              Float    // ภาษีที่ประหยัดได้
  marginalRate          Float    // อัตราภาษีขั้นสูงสุด
  deductions            Json     // รายละเอียดลดหย่อนทุกหมวด
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt

  @@unique([userId, taxYear])
}
