Table User {
  id Int [pk, increment]
  firebaseUid String [unique, null]
  email String [unique]
  password String [null]
  name String [null]
  onboardingDone Boolean [default: false]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime

  Note: 'User core account model'
}

Table UserFinance {
  id Int [pk, increment]
  userId Int [unique]
  food Float [default: 0]
  rent Float [default: 0]
  transport Float [default: 0]
  necessities Float [default: 0]
  other Float [default: 0]
  debt Float [default: 0]
  monthlyIncome Float [null, default: 0]
  currentCapital Float [default: 0]
  emergencyFund Float [default: 0]
  monthlySavings Float [default: 0]
  currentAge Int [default: 25]
  retirementAge Int [default: 60]
  retirementGoal Float [default: 0]
  dividendGoal Float [default: 0]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime

  Note: 'Consolidated user financial baseline profile'
}

Table Asset {
  id Int [pk, increment]
  symbol String [unique]
  name String
  sector String [null]
  category String
  yield Float
  risk Float
  badge String
  taxBase Int
  paysDividend Boolean
  createdAt DateTime [default: `now()`]
  updatedAt DateTime

  Note: 'Asset model for financial instruments'
}

Table BankTier {
  id Int [pk, increment]
  bankId String
  bankName String
  minBalance Int
  interestRate Float
  createdAt DateTime [default: `now()`]

  indexes {
    (bankId, minBalance) [unique]
  }

  Note: 'Bank interest tier model'
}

Table Portfolio {
  id Int [pk, increment]
  name String
  userId Int
  createdAt DateTime [default: `now()`]
  updatedAt DateTime

  Note: 'Main Portfolio model'
}

Table PortfolioItem {
  id Int [pk, increment]
  portfolioId Int
  assetId Int
  allocation Float
  buyDate DateTime
  createdAt DateTime [default: `now()`]

  indexes {
    (portfolioId, assetId)
  }

  Note: 'Portfolio holdings and DCA transactions'
}

Table ChatMessage {
  id Int [pk, increment]
  sessionId String
  firebaseUid String
  role String
  content String
  sources Json [null]
  createdAt DateTime [default: `now()`]

  indexes {
    (firebaseUid, sessionId)
    sessionId
  }

  Note: 'Chat history for AI Assistant'
}

Table InsurancePlan {
  id Int [pk, increment]
  company String
  category String
  planName String [null]
  coverage Json
  features String [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime

  Note: 'Insurance plans for stress-test simulation'
}

Table DiaryScoreHistory {
  id Int [pk, increment]
  userId Int
  evaluationType String
  periodKey String
  score Int
  review String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime

  indexes {
    (userId, evaluationType, periodKey) [unique]
  }

  Note: 'Diary AI behavior evaluation scores'
}

Table TaxHistory {
  id Int [pk, increment]
  userId Int
  taxYear Int
  annualIncome Float
  totalDeductions Float
  netIncome Float
  taxWithoutDeductions Float
  taxWithDeductions Float
  taxSaved Float
  marginalRate Float
  deductions Json
  createdAt DateTime [default: `now()`]
  updatedAt DateTime

  indexes {
    (userId, taxYear) [unique]
  }

  Note: 'Tax history records per user per year'
}

Ref: UserFinance.userId - User.id [delete: cascade]
Ref: Portfolio.userId > User.id [delete: cascade]
Ref: PortfolioItem.portfolioId > Portfolio.id [delete: cascade]
Ref: PortfolioItem.assetId > Asset.id
Ref: DiaryScoreHistory.userId > User.id [delete: cascade]
Ref: TaxHistory.userId > User.id [delete: cascade]
